--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "serverless-auto-swagger",
+  "name": "serverless-auto-postman",
   "version": "2.10.0",
-  "description": "Automatically generate a swagger file from your Serverless Framework config file",
+  "description": "Automatically generate a Postman collection file from your Serverless Framework config file",
   "main": "dist/index.js",
-  "homepage": "https://github.com/SamWSoftware/serverless-auto-swagger",
+  "homepage": "https://github.com/jimipedros/serverless-auto-postman",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SamWSoftware/serverless-auto-swagger"
+    "url": "https://github.com/jimipedros/serverless-auto-postman"
   },
   "scripts": {
     "start": "npm run build:watch",
     "compile": "tsc -p tsconfig.build.json",
     "build": "npm run compile",
     "build:watch": "npm run compile -- --watch",
-    "postbuild": "copyfiles -f ./src/resources/*.py ./dist/resources/",
     "check-types": "tsc --noEmit",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "npm run lint -- --fix",
@@ -29,8 +28,7 @@
   },
   "dependencies": {
     "@serverless/typescript": "^3.3.0",
-    "fs-extra": "^10.0.0",
-    "typeconv": "^1.4.1"
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
     "@jest/types": "^29.1.2",
@@ -39,7 +37,6 @@
     "@types/serverless": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "copyfiles": "^2.4.1",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-deprecation": "^1.3.2",
